--- a/config/datart.conf
+++ b/config/datart.conf
@@ -1,6 +1,8 @@
 # this file has the highest priority, if val is not blank, then will replace the config
 
 # datasource config
+# datasource.ip=58.22.61.222
+# datasource.port=57812
 datasource.ip=127.0.0.1
 datasource.port=3306
 datasource.database=datart
