--- a/config/datart.conf
+++ b/config/datart.conf
@@ -8,6 +8,7 @@ datasource.port=3306
 datasource.database=datart
 datasource.username=root
 datasource.password=123456
+datasource.importdatabase=ry_data
 
 # server
 server.port=8082
@@ -23,4 +24,4 @@ datart.register.expire-hours=
 # 邀请邮件有效期/小时, 默认48小时
 datart.invite.expire-hours=
 # 租户管理模式：platform-平台(默认)，team-团队
-datart.tenant-management-mode=platform
+datart.tenant-management-mode=team
