--- a/config/datart.conf
+++ b/config/datart.conf
@@ -3,11 +3,12 @@
 # datasource config
 # datasource.ip=58.22.61.222
 # datasource.port=57812
-datasource.ip=127.0.0.1
+datasource.ip=47.111.126.25
 datasource.port=3306
 datasource.database=datart
 datasource.username=root
-datasource.password=123456
+datasource.password=mysql666
+# datasource.password=123456
 datasource.importdatabase=ry_data
 
 # server
