--- a/security/pom.xml
+++ b/security/pom.xml
@@ -54,6 +54,12 @@
             <version>3.7.0</version>
         </dependency>
 
+        <!-- JimuReport依赖 -->
+        <dependency>
+            <groupId>org.jeecgframework.jimureport</groupId>
+            <artifactId>jimureport-spring-boot-starter</artifactId>
+            <version>1.5.2</version>
+        </dependency>
     </dependencies>
 
 
