--- a/core/pom.xml
+++ b/core/pom.xml
@@ -186,6 +186,12 @@
             <version>4.2.2</version>
         </dependency>
 
+        <!-- JimuReport依赖 -->
+        <dependency>
+            <groupId>org.jeecgframework.jimureport</groupId>
+            <artifactId>jimureport-spring-boot-starter</artifactId>
+            <version>1.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
