--- a/server/pom.xml
+++ b/server/pom.xml
@@ -209,6 +209,12 @@
             <version>2.0.4</version>
         </dependency>
 
+        <!-- pagehelper 分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
