--- a/config/datart.conf
+++ b/config/datart.conf
@@ -10,6 +10,7 @@ datasource.username=root
 datasource.password=mysql666
 # datasource.password=123456
 datasource.importdatabase=ry_data
+datasource.reportdatabase=report_data
 
 # server
 server.port=8082
